--- a/_doc/sphinxdoc/source/lectures/2022.rst
+++ b/_doc/sphinxdoc/source/lectures/2022.rst
@@ -384,3 +384,55 @@
     des dirigeants. Pas le moins du monde ; le vieux truc des villages
     Potemkine - le decorum caché misère avait marché grâce aux 
     talents de bateleur d'Hermann Goering et consorts.
+
+.. quote::
+    :author: Jean-Luc Domenach
+    :book: Crises, chaos et fins de monde, des Mayas au krach de 2008
+    :year: 2009
+    :index: Europe
+    :pages: 114
+
+    Une présentation communément admise est que le régime
+    communiste chinois était à l'origine ordonné et bénévole,
+    et qu'il est par la suite devenu délirant et cruel Elle est fausse.
+    Dès l'origine, il s'engage dans une expérience totalitaire
+    dont il a modifié le tracé, progressant si l'on peut dire
+    des massacres de la conquête aux famines de l'utopie
+    productiviste puis aux délires de la Révolution Culturelle.
+    Cette évolution en cascades du pire à d'autres pires aurait
+    peut-être pu être interrompue dans un autre régime et avec
+    d'autres dirigeants. Cela ne fut pas, car le PCC avait été
+    transformé en un organe de terreur par les conflits internes et
+    par les guerres, et parce qu'il avait fini par se laisser
+    capter par un seul homme, Mao Zedong, tout aussi obsédé par le
+    pouvoir qu'incapable de l'exercer tout seul. Il aura eu dans sa
+    carrières deux illuminations stratégiques : la découverte de la
+    voie paysanne en 1925, et vers 1935-1936 l'intuition que
+    l'invasion japonaise épuiserait le parti nationaliste,
+    offrant ainsi à l'Armée rouge l'occasion de la victoire.
+    Mais comment aurait-il pu accéder au pouvoir sans ses généraux,
+    les Zhu De, Peng Dehuai et Lin Biao et sans l'appareil patiemment
+    forgé par Liu Shaoqi dans les bases rouges de Chine du nord ?
+    Mao ne pouvait pas se passer d'eux, et pourtant il ne les
+    supportait pas non plus : la trame de l'histoire politique
+    chinoise était d'emblée en place.
+
+.. quote::
+    :author: Fabrice d'Almeida
+    :book: Crises, chaos et fins de monde, des Mayas au krach de 2008
+    :year: 2009
+    :index: Europe
+    :pages: 133
+
+    Au lieu de sortir le pays de la crise, Alfonsin l'y enfonce
+    un peu plus. La dette s'accroît. L'inflation franchit un cran
+    et s'élève désormais à près de 600% par an. En 1985, le président
+    joue son va-tout en proclamant le blocage des salaires et des prix
+    et en créant une nouvelle monnaie : l'austral. Il jugule
+    l'inflation. Malgré son échec à faire annuler une partie de
+    la dette bancaire, le gouvernement retrouve une popularité :
+    chacun se prend à espérer de nouveau. Cependant, quand en 1986,
+    les prix sont libérés sur les conseils pressants du FMI, la folie
+    se déchaîne bientôt sous la forme d'une hyperinflation.
+    L'austral perd brutalement toute valeur avec une inflation à trois
+    chiffres en 1988 et 1989.
