--- a/_doc/sphinxdoc/source/dessin_anime/a2010.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2010.rst
@@ -66,6 +66,8 @@
     secondaires est très réussie, chacun poursuit ses délires ou y 
     résiste à sa façon.
 
+    *Réalité refusée* est sans doute la phrase que je préfère.
+
 .. quote::
     :author: Wataru Watari
     :manga: My Teen Romantic Comedy is Wrong as I Expected
