--- a/_doc/sphinxdoc/source/lectures/2022.rst
+++ b/_doc/sphinxdoc/source/lectures/2022.rst
@@ -436,3 +436,12 @@
     se déchaîne bientôt sous la forme d'une hyperinflation.
     L'austral perd brutalement toute valeur avec une inflation à trois
     chiffres en 1988 et 1989.
+
+.. quote::
+    :author: Armelle 
+    :book: Les pieds sur Terre 9 septembre
+    :year: 2022
+    :index: bonheur
+    :link: https://www.radiofrance.fr/franceculture/podcasts/les-pieds-sur-terre/le-paradis-est-ici-5024767
+
+    J'apprenais à être moi-même. J'apprenais à laisser l'autre être lui.
