--- a/_doc/sphinxdoc/source/dessin_anime/a2000.rst
+++ b/_doc/sphinxdoc/source/dessin_anime/a2000.rst
@@ -318,8 +318,7 @@
     :index: modernité
     :year: 2008
     :title1: true
-
-    `Casshern Sins <https://fr.wikipedia.org/wiki/Casshern_Sins>`_
+    :source: https://fr.wikipedia.org/wiki/Casshern_Sins
 
     Un héros détruit des machines vivantes atteintes par la rouille.
     Il ne sait pas vraiment pourquoi il le fait comme si les rôles
@@ -332,8 +331,7 @@
     :index: fuite
     :year: 2008
     :title1: true
-
-    `Michiko to Hatchin <https://fr.wikipedia.org/wiki/Michiko_to_Hatchin>`_
+    :source: https://fr.wikipedia.org/wiki/Michiko_to_Hatchin
 
     Une femme, une fille qui fuient, l'une la prison, l'autre sa famille.
     Elles fuient ensemble.
@@ -344,8 +342,7 @@
     :index: noir
     :year: 2008
     :title1: true
-
-    `Mnemosyne <https://fr.wikipedia.org/wiki/Mnemosyne_(anime)>`_
+    :source: https://fr.wikipedia.org/wiki/Mnemosyne_(anime)
 
     On ne sait pas vraiment où on va dans cette série.
     Mais elle est courte et bien ficelée.
@@ -356,8 +353,7 @@
     :index: huis-clos
     :year: 2009
     :title1: true
-
-    `L'attaque des titans <https://fr.wikipedia.org/wiki/L%27Attaque_des_Titans>`_
+    :source: https://fr.wikipedia.org/wiki/L%27Attaque_des_Titans
 
     Le début de ce manga me paraît assez proche de la série
     `Battlestar Gallactica <https://fr.wikipedia.org/wiki/Cylon_(Battlestar_Galactica)>`_.
@@ -371,8 +367,7 @@
     :index: démocratie
     :year: 2009
     :title1: true
-
-    `Canaan <https://fr.wikipedia.org/wiki/Canaan_(anime)>`_
+    :source: https://fr.wikipedia.org/wiki/Canaan_(anime)
 
     Une photographe croise de près une fille, espionne, tueuse, peu importe.
     C'est difficile d'être fasciné par un personnage dont le métier
@@ -386,8 +381,7 @@
     :index: catastrophe
     :year: 2009
     :title1: true
-
-    `Eden of The East <https://fr.wikipedia.org/wiki/Eden_of_the_East>`_
+    :source: https://fr.wikipedia.org/wiki/Eden_of_the_East
 
     Que feriez-vous si l'on vous forçait à devenir un terroriste ?
 
