--- a/_doc/lectures/2019.rst
+++ b/_doc/lectures/2019.rst
@@ -23,6 +23,16 @@
     son courage ; cet éternel refus que la colonisation lui
     oppose, il en fera le refus absolu de la colonisation.
 
+Ce livre m'a fait songer aux mouvements des gilets jaunes. C'est une étonnante
+grille de lecture si on considère que les gilets jaunes sont
+en quelque sorte des colonisés. Il explore les ressentis de part
+et d'autres de la barrière. La dernière partie consacrée aux
+colonisés montre également comment les colonies des années 1950 portaient
+en elles les germes de l'intégrisme d'aujourd'hui.
+Je me suis demandé en le lisant s'il n'existait pas aujourd'hui
+une déclinaison économique. Les frontières d'hier étaient géographiques,
+elles sont peut-être financières aujourd'hui.
+
 .. quote::
     :author: Alber Memmi
     :book: Portrait du colonisé, portrait du colonisateur
