--- a/_doc/lectures/2023.rst
+++ b/_doc/lectures/2023.rst
@@ -9,7 +9,7 @@
     :book: Hedy Lamarr, star et inventeuse de génie
     :year: 2017
     :index: inspiration
-    :source: https://www.arte.tv/fr/videos/084681-000-A/hedy-lamarr-star-et-inventeuse-de-genie/
+    :source: https://en.wikipedia.org/wiki/K-On!
 
     Les gens sont déraisonnables, illogiques et égocentriques.
     Aimez-les tout de même.
